# note-pen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: voice_leading.rs
src/: accidental.rs  alphabet.rs  chord.rs  clef.rs  duration.rs  interval.rs  key.rs  key_signature.rs  lib.rs  measure.rs  note.rs  part.rs  phrase.rs  pitch.rs  rest.rs  roman_numeral.rs  scale_degree.rs  score.rs  solfege.rs  time.rs  time_signature.rs  tonality.rs  voice.rs
