[package]
name = "note-pen"
version = "0.1.0"
edition = "2021"
authors = ["Ashwin Naren <arihant2math@gmail.com>"]
description = "A library to represent musical concepts in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/arihant2math/note-pen"

[dependencies]
indexmap = "2.7"
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "1.12", features = ["v4"] }

[features]
default = []
serde = ["dep:serde", "indexmap/serde"]
