[package]
name = "note-pen"
version = "0.2.0"
edition = "2021"
authors = ["Ashwin Naren <arihant2math@gmail.com>"]
description = "A library to represent musical concepts in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/arihant2math/note-pen"

[[example]]
name = "voice_leading"
path = "examples/voice_leading.rs"
required-features = ["examples"]

[dependencies]
derive_more = { version = "2.0", features = ["std", "add", "not"] }
indexmap = "2.7"
itertools = { version = "0.14", optional = true }
midi_file = { version = "0.0.6", optional = true }
musicxml = { version = "1.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "1.12", features = ["v4"] }

[features]
default = ["musicxml"]
examples = ["dep:itertools"]
midi = ["dep:midi_file"]
musicxml = ["dep:musicxml"]
serde = ["dep:serde", "indexmap/serde"]
